@@ -2,119 +2,178 @@ package org.monarchinitiative.phenopacket2prompt.output.impl.english;
 
 import org.monarchinitiative.phenol.base.PhenolRuntimeException;
 import org.monarchinitiative.phenopacket2prompt.model.*;
+import org.monarchinitiative.phenopacket2prompt.output.BuildingBlockGenerator;
 import org.monarchinitiative.phenopacket2prompt.output.PPKtIndividualInfoGenerator;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
+
+/**
+ * This class produces the very first sentence of the prompt, e.g.,
+ * <pre>
+ * "The proband was a 22-year-old woman."
+ * </pre>
+ * <p>
+ * There are several possible cases to take into account, depending on whether we have the
+ * the age at last presentation and whether the sex is specified.
+ * The proband was a female.
+ * The proband was 33-years old.
+ * The proband was a 22-year-old man.
+ * The proband was a male fetus.
+ * If neither age nor sex is available, we write
+ * "The proband was an individual."
+ * </p>
+ * <p>
+ * The entry point to the generation of this sentence is the function {@code #getIndividualDescription}.
+ * </p>
+ */
 public class PpktIndividualEnglish implements PPKtIndividualInfoGenerator {
 
-    public PpktIndividualEnglish() {
+    private final BuildingBlockGenerator buildBlocks;
 
+    public PpktIndividualEnglish() {
+        buildBlocks = new EnglishBuildingBlocks();
     }
 
-
+    /**
+     * We begin our description with a sentence
+     *
+     * @param individual the individual for whom we are creating a diagnostic prompt
+     * @return complete prompt for an LLM
+     */
     public String getIndividualDescription(PpktIndividual individual) {
         if (individual.annotationCount() == 0) {
             throw new PhenolRuntimeException("No HPO annotations");
         }
+
         Optional<PhenopacketAge> lastExamOpt = individual.getAgeAtLastExamination();
         Optional<PhenopacketAge> onsetOpt = individual.getAgeAtOnset();
         PhenopacketSex psex = individual.getSex();
-        if (lastExamOpt.isPresent() && onsetOpt.isPresent()) {
-            return onsetAndLastEncounterAvailable(psex, lastExamOpt.get(), onsetOpt.get());
-        } else if (lastExamOpt.isPresent()) {
-            return lastEncounterAvailable(psex, lastExamOpt.get());
-        } else if (onsetOpt.isPresent()) {
-            return onsetAvailable(psex, onsetOpt.get());
+        String individualDescription;
+        String onsetDescription;
+        if (lastExamOpt.isPresent()) {
+            var lastExamAge =  lastExamOpt.get();
+            if (lastExamAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
+                Iso8601Age isoAge = (Iso8601Age) lastExamAge;
+                individualDescription =  iso8601individualDescription(psex, isoAge);
+            } else if (lastExamAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
+                HpoOnsetAge hpoOnsetTermAge = (HpoOnsetAge) lastExamAge;
+                individualDescription = hpoOnsetIndividualDescription(psex, hpoOnsetTermAge);
+            } else {
+                // should never happen
+                throw new PhenolRuntimeException("Did not recognize last exam age type " + lastExamAge.ageType());
+            }
+        }  else {
+            individualDescription =  switch (psex) {
+                case FEMALE -> buildBlocks.probandWasAFemale();
+                case MALE -> buildBlocks.probandWasAMale();
+                default -> buildBlocks.probandWasAnIndividual();
+            };
+        }
+        if (onsetOpt.isPresent()) {
+            var onsetAge = onsetOpt.get();
+            if (onsetAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
+                Iso8601Age isoAge = (Iso8601Age) onsetAge;
+                onsetDescription =  iso8601onsetDescription(isoAge);
+            } else if (onsetAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
+                HpoOnsetAge hpoOnsetTermAge = (HpoOnsetAge) onsetAge;
+                onsetDescription = hpoOnsetDescription(hpoOnsetTermAge);
+            } else {
+                // should never happen
+                throw new PhenolRuntimeException("Did not recognize last exam age type " + onsetAge.ageType());
+            }
         } else {
-            return ageNotAvailable(psex);
+            onsetDescription = "Disease onset was not specified";
+        }
+        return String.format("%s. %s.", individualDescription, onsetDescription);
+
+    }
+
+
+
+    private String iso8601onsetDescription(Iso8601Age isoAge) {
+        return String.format("Disease onset occurred when the proband was a %s",
+                buildBlocks.yearsMonthsDaysOld(isoAge.getYears(), isoAge.getMonths(), isoAge.getDays()));
+    }
+
+    private String hpoOnsetDescription(HpoOnsetAge hpoOnsetTermAge) {
+        return String.format("Disease onset occurred when the proband was %s",
+            nameOfLifeStage(hpoOnsetTermAge));
+    }
+
+    private String nameOfLifeStage(HpoOnsetAge hpoOnsetTermAge) {
+        if (hpoOnsetTermAge.isFetus()) {
+            return "a " + buildBlocks.fetus();
+        } else if (hpoOnsetTermAge.isCongenital()) {
+            return "a " + buildBlocks.newborn();
+        } else if (hpoOnsetTermAge.isInfant()) {
+            return "an " + buildBlocks.infant();
+        } else if (hpoOnsetTermAge.isChild()) {
+            return "a " + buildBlocks.child();
+        } else if (hpoOnsetTermAge.isJuvenile()) {
+            return "an " +buildBlocks.adolescentChild();
+        } else if (hpoOnsetTermAge.isNeonate()) {
+            return "a " +buildBlocks.newborn();
+        } else if (hpoOnsetTermAge.isYoungAdult()) {
+            return "a young adult"; // +buildBlocks.asYoungAdult();
+        }  else if (hpoOnsetTermAge.isAdult()) {
+            return "an " +buildBlocks.adult();
+        } else {
+            throw new PhenolRuntimeException("Could not identify life stage name for HpoOnsetAge " + hpoOnsetTermAge.toString());
         }
     }
 
+
+
+    /**
+     * NOTE THIS SHOULD BE REMOVED
+     *
+     * @param psex
+     * @return
+     */
     @Override
     public String heSheIndividual(PhenopacketSex psex) {
         return switch (psex) {
-            case FEMALE -> "she";
-            case MALE -> "he";
-            default -> "the individual";
+            case FEMALE -> buildBlocks.she();
+            case MALE -> buildBlocks.he();
+            default -> buildBlocks.theIndividual();
         };
     }
 
 
-    private String iso8601ToYear(Iso8601Age iso8601Age) {
-        return String.format("%d-year old", iso8601Age.getYears());
-    }
-
-    private String iso8601ToYearMonth(Iso8601Age iso8601Age) {
-        if (iso8601Age.getMonths() == 0) {
-            return String.format("%d-year old", iso8601Age.getYears());
-        } else {
-            return String.format("%d-year, %d-month old", iso8601Age.getYears(), iso8601Age.getMonths());
-        }
-    }
-
-    private String iso8601ToMonthDay(Iso8601Age iso8601Age) {
-        int m = iso8601Age.getMonths();
-        int d = iso8601Age.getDays();
-        if (m == 0) {
-            return String.format("%d-day old", d);
-        } else if (d>0){
-            return String.format("%d-month, %d-day old", m, d);
-        } else {
-            return String.format("%d-month old", m);
-        }
-    }
-
     /**
      * Create a phrase such as "at the age of 7 years, 4 months, and 2 days"
      * Leave out the months and days if they are zero.
+     *
      * @param isoAge
      * @return
      */
     private String iso8601AtAgeOf(Iso8601Age isoAge) {
         List<String> components = new ArrayList<>();
 
-        if (isoAge.getYears()>0) {
-            String ystring = isoAge.getYears() == 1 ? "year" : "years";
-            components.add(String.format("%d %s", isoAge.getYears(), ystring));
+        if (isoAge.getYears() > 0) {
+            components.add(buildBlocks.years(isoAge.getYears()));
         }
         if (isoAge.getMonths() > 0) {
-            String mstring = isoAge.getMonths() == 1 ? "month" : "months";
-            components.add(String.format("%d %s", isoAge.getMonths(), mstring));
+            components.add(buildBlocks.months(isoAge.getMonths()));
         }
-        if (isoAge.getDays()>0) {
-            String dstring = isoAge.getDays() == 1 ? "day" : "days";
-            components.add(String.format("%d %s", isoAge.getDays(), dstring));
+        if (isoAge.getDays() > 0) {
+            components.add(buildBlocks.months(isoAge.getDays()));
         }
         if (components.isEmpty()) {
-            return "as a newborn";
+            return buildBlocks.asNewborn();
         } else if (components.size() == 1) {
-            return "at the age of " + components.get(0);
+            return buildBlocks.atTheAgeOf() + " " + components.getFirst();
         } else if (components.size() == 2) {
-            return "at the age of " + components.get(0) + " and " + components.get(1);
+            return buildBlocks.atTheAgeOf() + " " + components.get(0) + " and " + components.get(1);
         } else {
-            return "at the age of " + components.get(0) + "m " + components.get(1) +
+            return buildBlocks.atTheAgeOf() + " " + components.get(0) + ", " + components.get(1) +
                     ", and " + components.get(2);
         }
     }
 
-    private String onsetTermAtAgeOf(HpoOnsetAge hpoOnsetTermAge) {
-        if (hpoOnsetTermAge.isFetus()) {
-            return  "in the fetal period";
-        } else if (hpoOnsetTermAge.isCongenital()) {
-            return  "at birth";
-        } else if (hpoOnsetTermAge.isInfant()) {
-            return "as an infant";
-        } else if (hpoOnsetTermAge.isChild()) {
-            return "in childhood";
-        } else if (hpoOnsetTermAge.isJuvenile()) {
-            return "as an adolescent";
-        } else {
-            return "in adulthood";
-        }
-    }
 
 
     private String iso8601individualDescription(PhenopacketSex psex, Iso8601Age iso8601Age) {
@@ -122,251 +181,122 @@ public class PpktIndividualEnglish implements PPKtIndividualInfoGenerator {
         int m = iso8601Age.getMonths();
         int d = iso8601Age.getDays();
         // if older
-        if (y>17) {
+        if (y > 17) {
+            String age = buildBlocks.yearsOld(y);
             return switch (psex) {
-                case FEMALE -> String.format("%d-year old woman", y);
-                case MALE -> String.format("%d-year old man", y);
-                default -> String.format("%d-year old individual", y);
+                case FEMALE -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.woman());
+                case MALE -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.man());
+                default -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.individual());
             };
-        } else if (y>9) {
+        } else if (y > 9) {
+            String age = buildBlocks.yearsOld(y);
             return switch (psex) {
-                case FEMALE -> String.format("%d-year old adolescent female", y);
-                case MALE -> String.format("%d-year old adolescent male", y);
-                default -> String.format("%d-year old adolescent", y);
+                case FEMALE -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.adolescentGirl());
+                case MALE -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.adolescentBoy());
+                default -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.adolescentChild());
             };
-        } else if (y>0) {
+        } else if (y > 0) {
+            String age = buildBlocks.yearsMonthsDaysOld(y, m, d);
             return switch (psex) {
-                case FEMALE -> String.format("%s girl", iso8601ToYearMonth(iso8601Age));
-                case MALE -> String.format("%s boy", iso8601ToYearMonth(iso8601Age));
-                default -> String.format("%s child", iso8601ToYearMonth(iso8601Age));
+                case FEMALE -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.girl());
+                case MALE -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.boy());
+                default -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.child());
             };
-        } else if (m>0 || d> 0) {
+        } else if (m > 0 || d > 0) {
+            String age = buildBlocks.monthDayOld(m, d);
             return switch (psex) {
-                case FEMALE -> String.format("%s female infant", iso8601ToMonthDay(iso8601Age));
-                case MALE -> String.format("%s male infant", iso8601ToMonthDay(iso8601Age));
-                default -> String.format("%s infant", iso8601ToMonthDay(iso8601Age));
+                case FEMALE -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.femaleInfant());
+                case MALE -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.maleInfant());
+                default -> String.format("%s %s %s", buildBlocks.probandWasA(), age, buildBlocks.infant());
             };
         } else {
             return switch (psex) {
-                case FEMALE -> "newborn girl";
-                case MALE -> "newborn boy";
-                default -> "newborn";
+                case FEMALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.newbornGirl());
+                case MALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.newbornBoy());
+                default -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.newborn());
             };
         }
     }
+
 
     private String hpoOnsetIndividualDescription(PhenopacketSex psex, HpoOnsetAge hpoOnsetTermAge) {
         if (hpoOnsetTermAge.isFetus()) {
             return switch (psex) {
-                case FEMALE -> "female fetus";
-                case MALE -> "male fetus";
-                default -> "fetus";
+                case FEMALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.femaleFetus());
+                case MALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.maleFetus());
+                default -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.fetus());
             };
         } else if (hpoOnsetTermAge.isCongenital()) {
             return switch (psex) {
-                case FEMALE -> "female newborn";
-                case MALE -> "male newborn";
-                default -> "newborn";
+                case FEMALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.newbornGirl());
+                case MALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.newbornBoy());
+                default -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.newborn());
             };
         } else if (hpoOnsetTermAge.isInfant()) {
             return switch (psex) {
-                case FEMALE -> "female infant";
-                case MALE -> "male infant";
-                default -> "infant";
+                case FEMALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.femaleInfant());
+                case MALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.maleInfant());
+                default -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.infant());
             };
         } else if (hpoOnsetTermAge.isChild()) {
             return switch (psex) {
-                case FEMALE -> "girl";
-                case MALE -> "boy";
-                default -> "child";
+                case FEMALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.girl());
+                case MALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.boy());
+                default -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.child());
             };
         } else if (hpoOnsetTermAge.isJuvenile()) {
             return switch (psex) {
-                case FEMALE -> "female adolescent";
-                case MALE -> "male adolescent";
-                default -> "adolescent";
+                case FEMALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.adolescentGirl());
+                case MALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.adolescentBoy());
+                default -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.adolescentChild());
             };
-        }else {
+        } else if (hpoOnsetTermAge.isAdult()) {
             return switch (psex) {
-                case FEMALE -> "woman";
-                case MALE -> "man";
-                default -> "adult";
+                case FEMALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.woman());
+                case MALE -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.male());
+                default -> String.format("%s %s", buildBlocks.probandWasA(), buildBlocks.adult());
             };
+        } else {
+            throw new PhenolRuntimeException("Could not find HPO onset type " + hpoOnsetTermAge.toString());
         }
     }
 
-    /**
-     * A sentence such as The proband was a 39-year old woman who presented at the age of 12 years with
-     * HPO1, HPO2, and HPO3. HPO4 and HPO5 were excluded. This method returns the phrase that ends with "with"
-     * @param psex
-     * @param lastExamAge
-     * @param onsetAge
-     * @return
-     */
-    private String onsetAndLastEncounterAvailable(PhenopacketSex psex, PhenopacketAge lastExamAge, PhenopacketAge onsetAge) {
-        String individualDescription;
-        String onsetDescription;
-        if (lastExamAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
-            Iso8601Age isoAge = (Iso8601Age) lastExamAge;
-            individualDescription = iso8601individualDescription(psex, isoAge);
-        } else if (lastExamAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
-            HpoOnsetAge hpoOnsetTermAge = (HpoOnsetAge) lastExamAge;
-            individualDescription = hpoOnsetIndividualDescription(psex,hpoOnsetTermAge);
-        } else {
-            // should never happen
-            throw new PhenolRuntimeException("Did not recognize last exam age type " + lastExamAge.ageType());
-        }
-        if (onsetAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
-            Iso8601Age isoAge = (Iso8601Age) onsetAge;
-            onsetDescription = iso8601AtAgeOf(isoAge);
-        } else if (onsetAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
-            HpoOnsetAge hpoOnsetTermAge = (HpoOnsetAge) onsetAge;
-            onsetDescription = onsetTermAtAgeOf(hpoOnsetTermAge);
-        } else {
-            // should never happen
-            throw new PhenolRuntimeException("Did not recognize onset age type " + onsetAge.ageType());
-        }
-        return String.format("The proband was a %s who presented %s with", individualDescription, onsetDescription);
-    }
-
-
-    /**
-     * Age at last examination available but age of onset not available
-     * The proband was a 39-year old woman who presented with HPO1, HPO2, and HPO3. HPO4 and HPO5 were excluded.
-     * @param psex
-     * @param lastExamAge
-     */
-    private String lastEncounterAvailable(PhenopacketSex psex, PhenopacketAge lastExamAge) {
-        String individualDescription;
-        if (lastExamAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
-            Iso8601Age isoAge = (Iso8601Age) lastExamAge;
-            individualDescription = iso8601individualDescription(psex, isoAge);
-        } else if (lastExamAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
-            HpoOnsetAge hpoOnsetTermAge = (HpoOnsetAge) lastExamAge;
-            individualDescription = hpoOnsetIndividualDescription(psex,hpoOnsetTermAge);
-        } else {
-            // should never happen
-            throw new PhenolRuntimeException("Did not recognize last exam age type " + lastExamAge.ageType());
-        }
-        return String.format("The proband was a %s who presented with", individualDescription);
-    }
-
-    /**
-     * Age at last examination not available but age of onset available
-     * The proband  presented  at the age of 12 years with HPO1, HPO2, and HPO3. HPO4 and HPO5 were excluded.
-     * @param psex
-     * @param onsetAge
-     * @return
-     */
-    private String onsetAvailable(PhenopacketSex psex, PhenopacketAge onsetAge) {
-        String onsetDescription;
-        if (onsetAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
-            Iso8601Age isoAge = (Iso8601Age) onsetAge;
-            onsetDescription = iso8601AtAgeOf(isoAge);
-        } else if (onsetAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
-            HpoOnsetAge hpoOnsetTermAge = (HpoOnsetAge) onsetAge;
-            onsetDescription = onsetTermAtAgeOf(hpoOnsetTermAge);
-        } else {
-            // should never happen
-            throw new PhenolRuntimeException("Did not recognize onset age type " + onsetAge.ageType());
-        }
-        return String.format("The proband presented %s with", onsetDescription, onsetDescription);
-    }
-
-    private String ageNotAvailable(PhenopacketSex psex) {
-        return switch (psex) {
-            case FEMALE -> "The proband was a female who presented with";
-            case MALE -> "The proband was a male who presented with";
-            default -> "The proband presented with";
-        };
-    }
-
-    private String individualName(PpktIndividual individual) {
-        PhenopacketSex psex = individual.getSex();
-        Optional<PhenopacketAge> ageOpt = individual.getAgeAtLastExamination();
-        if (ageOpt.isEmpty()) {
-            ageOpt = individual.getAgeAtOnset();
-        }
-        if (ageOpt.isEmpty()) {
-            return switch (psex) {
-                case FEMALE -> "female";
-                case MALE -> "male";
-                default -> "individual";
-            };
-        }
-        PhenopacketAge age = ageOpt.get();;
-        if (age.isChild()) {
-            return switch (psex) {
-                case FEMALE -> "girl";
-                case MALE -> "boy";
-                default -> "child";
-            };
-        } else if (age.isCongenital()) {
-            return switch (psex) {
-                case FEMALE -> "female newborn";
-                case MALE -> "male newborn";
-                default -> "newborn";
-            };
-        } else if (age.isFetus()) {
-            return switch (psex) {
-                case FEMALE -> "female fetus";
-                case MALE -> "male fetus";
-                default -> "fetus";
-            };
-        } else if (age.isInfant()) {
-            return switch (psex) {
-                case FEMALE -> "female infant";
-                case MALE -> "male infant";
-                default -> "infant";
-            };
-        } else {
-            return switch (psex) {
-                case FEMALE -> "woman";
-                case MALE -> "man";
-                default -> "individual";
-            };
-        }
-    }
-
-
-
-  /*  @Override
-    public String individualWithAge(PhenopacketAge ppktAge) {
-        if (ppktAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
-            return  ppktAge.age() + " old";
-        } else if (ppktAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
-            String label = ppktAge.age(); // something like "Infantile onset"
-            return switch (label) {
-                case "Infantile onset" -> "infant";
-                case "Childhood onset" -> "child";
-                case "Neonatal onset"  -> "neonate";
-                case "Congenital onset" -> "born";
-                case "Adult onset" -> "adult";
-                default-> String.format("During the %s", label.replace(" onset", ""));
-            };
-        } else {
-            return ""; // should never get here
-        }
-    }*/
 
     @Override
-    public String atAge(PhenopacketAge ppktAge) {
+    public String atAgeForVignette(PhenopacketAge ppktAge) {
         if (ppktAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
-            return "At an age of " + ppktAge.age();
+            return "At an age of " + buildBlocks.fromIso((Iso8601Age)ppktAge);
         } else if (ppktAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
-            String label = ppktAge.age(); // something like "Infantile onset"
-            return switch (label) {
-                case "Infantile onset" -> "During the infantile period";
-                case "Childhood onset" -> "During childhood";
-                case "Neonatal onset"  -> "During the neonatal period";
-                case "Congenital onset" -> "At birth";
-                case "Adult onset" -> "As an adult";
-                default-> String.format("During the %s", label.replace(" onset", ""));
-            };
+            if (ppktAge.isEmbryo()) {
+                return buildBlocks.duringEmbryonic();
+            } else if (ppktAge.isFetus()) {
+                return buildBlocks.duringFetal();
+            } else if (ppktAge.isCongenital()) {
+                return buildBlocks.atBirth();
+            } else if (ppktAge.isNeonate()) {
+                return buildBlocks.asNeonate();
+            } else if (ppktAge.isInfant()) {
+                return buildBlocks.asInfant();
+            } else if (ppktAge.isChild()) {
+                return buildBlocks.inChildhood();
+            } else if (ppktAge.isJuvenile()) {
+                return buildBlocks.asAdolescent();
+            } else if (ppktAge.isYoungAdult()) {
+                return buildBlocks.asYoungAdult();
+            } else if (ppktAge.isMiddleAge()) {
+                return buildBlocks.asMiddleAge();
+            } else if (ppktAge.isLateAdultAge()) {
+                return buildBlocks.asLateOnset();
+            } else if (ppktAge.isAdult()) {
+                return buildBlocks.asAdult();
+            } else {
+                throw new PhenolRuntimeException("Did not recognize onset: " + ppktAge.toString());
+            }
         } else {
-            return ""; // should never get here
+            throw new PhenolRuntimeException("Bad age type");
         }
     }
+
 
 
 }
